# fading_afternoon_fish_bot

./: README.md
bot_fa/: =3.11  main.py  pyproject.toml
